--- a/fluud-app/Gemfile
+++ b/fluud-app/Gemfile
@@ -12,6 +12,8 @@ gem 'rails', '~> 5.0.7', '>= 5.0.7.2'
 gem 'sqlite3', '~> 1.3.13' 
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
+#devise shit
+gem 'devise'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
